--- a/data/rc_models/rc_models.cfg
+++ b/data/rc_models/rc_models.cfg
@@ -28,6 +28,20 @@ viperslim       viperslim
 #Axas
 e4hd            e4hd
 #
+# Dreambox
+dm8000          dmmadv
+dm500hdv2       dmm2
+dm800sev2       dmm2
+dm7020hd        dmm2
+dm7020hdv2      dmm2
+dm520           dmm2
+dm820           dmm2
+dm7080          dmm2
+dm900           dmm2
+dm920           dmm2
+dreamone        dmm2
+dreamtwo        dmm2
+#
 # Edision
 osmega          osmini
 osmini4k        edision4
@@ -170,7 +184,3 @@ sf8008m        octagon
 #
 # uClan
 ustym4kpro     uclan
-#
-# AB-COM
-pulse4k        pulse
-pulse4kmini    pulse
